@@ -79,7 +79,7 @@ extern datum make_content(struct mandata *in);
 extern int list_extensions(char *data, char *ext[]);
 extern void gripe_replace_key(const char *data);
 extern void gripe_bad_multi_key(const char *data);
-extern char *copy_if_set(char *str);
-extern const char *dash_if_unset(char *str);
+extern char *copy_if_set(const char *str);
+extern const char *dash_if_unset(const char *str);
 
 #endif
