@@ -1,3 +1,15 @@
+Wed May  1 02:05:02 BST 2002  Colin Watson  <cjwatson@debian.org>
+
+	* libdb/db_store.c: Make sure the check for whether a replace is
+	  necessary in situation (3) behaves as it did before the multi key
+	  format changes.
+
+	* libdb/db_lookup.c (copy_if_set, dash_if_unset): Constify
+	  arguments.
+	* libdb/db_storage.h: Likewise for prototypes.
+	* src/convert_name.c (gripe_converting_name): name should be const.
+	* src/manp.c (get_catpath): suffix should be const.
+
 Wed May  1 00:14:20 BST 2002  Colin Watson  <cjwatson@debian.org>
 
 	* src/globbing.c (match_in_directory): Close the directory after
